<resources>
    <string name="app_name">HaVagas</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="email">Email</string>
    <string name="deseja_receber_notifica_es">Receber notificações</string>
    <string name="telefone">Telefone</string>
    <string name="fixo">Telefone Fixo</string>
    <string name="comercial">Telefone Comercial</string>
    <string name="adicionar_celular">Adicionar celular</string>
    <string name="celular">Celular</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="data_nascimento">Data Nascimento</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string name="vagas_de_interesse">Vagas de Interesse</string>
    <string name="orientador">Orientador</string>
    <string name="titulo">Titulo</string>
    <string name="institui_o">Instituição</string>
    <string name="ano_de_conclus_o">Ano de conclusão</string>
    <string name="ano_de_forma_o">Ano de Formação</string>
    <string-array name="formacao">
        <item>Ensino Fundamental</item>
        <item>Ensino Médio</item>
        <item>Graduação</item>
        <item>Especialização</item>
        <item>Mestrado</item>
        <item>Doutorado</item>
    </string-array>
</resources>